# X-Toon-Shading

./: .gitignore  CMakeLists.txt  README.md
pigr/fp/: CMakeLists.txt  deferred_shading.frag  g_buffer.frag  g_buffer.vert  main.cpp  mesh.h  model.h  objloader.h  shader.frag  shader.h  shader.vert
pigr/fp/forward shading/: shader.frag
pigr/fp/images/: CMakeLists.txt
